--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,10 +13,13 @@ services:
         ports:
             - "8000:8000"
         environment:
+            - CONTAINER_NAME=DJANGO
             - DEBUG=1
             - DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
             - CELERY_BROKER=redis://redis:6379/0
             - CELERY_BACKEND=redis://redis:6379/0
+        env_file:
+            - ./.envs/.env
         depends_on:
             - pgdb
             - redis
@@ -26,10 +29,13 @@ services:
         volumes:
             - .:/usr/src/app
         environment:
+            - CONTAINER_NAME=CELERY
             - DEBUG=1
             - DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
             - CELERY_BROKER=redis://redis:6379/0
             - CELERY_BACKEND=redis://redis:6379/0
+        env_file:
+            - ./.envs/.env
         depends_on:
             - django
             - redis
@@ -40,6 +46,8 @@ services:
             - POSTGRES_DB=postgres
             - POSTGRES_USER=postgres
             - POSTGRES_PASSWORD=postgres
+        env_file:
+            - ./.envs/.env
         volumes:
             - pgdata:/var/lib/postgresql/data/
     redis:
