add periodic task

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,23 @@ services:
         depends_on:
             - django
             - redis
+    celery-beat:
+        build: .
+        container_name: celery-beat
+        command: celery -A core beat -l INFO
+        volumes:
+        - .:/usr/src/app
+        environment:
+        - CONTAINER_NAME=CELERY-BEAT
+        - DEBUG=1
+        - DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
+        - CELERY_BROKER=redis://redis:6379/0
+        - CELERY_BACKEND=redis://redis:6379/0
+        env_file:
+        - ./.envs/.env
+        depends_on:
+        - django
+        - redis
     pgdb:
         image: postgres
         container_name: pgdb
