--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
     celery:
         build: .
         container_name: celery
-        command: celery -A core worker -l INFO
+        command: celery -A core worker -l INFO -n worker1@%h
         volumes:
             - .:/usr/src/app
         environment:
@@ -55,6 +55,23 @@ services:
         depends_on:
         - django
         - redis
+    flower:
+        build: .
+        container_name: flower
+        command: celery -A core flower --port=5555 --broker=redis://redis:6379/0 --result-backend=redis://redis:6379/0
+        ports:
+            - 5555:5555
+        environment:
+            - CONTAINER_NAME=FLOWER
+            - DEBUG=1
+            - DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
+            - CELERY_BROKER=redis://redis:6379/0
+            - CELERY_BACKEND=redis://redis:6379/0
+        env_file:
+            - ./.envs/.env
+        depends_on:
+            - django
+            - redis
     pgdb:
         image: postgres
         container_name: pgdb
